# tupac-wasm

./: Cargo.toml  Dockerfile  LEARN_FROM_MISTAKES.md  README.md  RESEARCH_REFERENCES.md  index.html  nginx.conf.template  package.json  render.yaml  vite.config.ts
pages/: astar.html  babylon-chunks.html  babylon-wfc.html  hello-wasm.html  preprocess.html
public/: sw.js
scripts/: build-wasm.sh  build.sh
src/: main.ts  parameter-set-embedding-prompts.ts  styles.css  types.ts
src/routes/: astar.ts  babylon-chunks.ts  babylon-chunks.worker.ts  babylon-wfc.ts  hello-wasm.ts  preprocess.ts
src/routes/babylon-chunks/: canvasManagement.ts  chunkManagement.ts  dbManagement.ts  hexUtils.ts  layoutGeneration.ts  llmManagement.ts  wasmManagement.ts
src/wasm/: loader.ts  types.ts
wasm-astar/: Cargo.toml
wasm-astar/src/: lib.rs
wasm-astar/src/browser/: mod.rs
wasm-astar/src/engine/: mod.rs
wasm-astar/src/utils/: mod.rs
wasm-astar/src/world/: mod.rs  tile.rs
wasm-babylon-chunks/: Cargo.toml
wasm-babylon-chunks/src/: lib.rs
wasm-hello/src/: lib.rs
wasm-preprocess/: Cargo.toml
wasm-preprocess/src/: lib.rs
