[workspace]
members = ["wasm-astar", "wasm-preprocess", "wasm-preprocess-256m", "wasm-preprocess-image-captioning", "wasm-agent-tools", "wasm-fractal-chat", "wasm-hello", "wasm-babylon-wfc", "wasm-babylon-chunks", "wasm-multilingual-chat"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
opt-level = 's'
